added menus-option, about us and working on services

--- a/project-copy-mahim/index.html
+++ b/project-copy-mahim/index.html
@@ -8,15 +8,35 @@
 </head>
 <body>
     <header>
-        <div class="logo">
-            <img src="logo/logo-dark.png" alt="logo-dark" width="130px">
-        </div>
-        <div class="motto">
-            <h3>We work to serve you</h3>
-        </div>
+        <section>
+            <div class="logo-section">
+                <div class="logo">
+                    <img src="logo/logo-dark.png" alt="logo-dark" width="130px">
+                </div>
+                <div class="motto">
+                    <h3>We work to serve you</h3>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="menu-options">
+                <div class="box">
+                    <a href="#home">Home</a>
+                </div>
+                <div class="box">
+                    <a href="#about">About us</a>
+                </div>
+                <div class="box">
+                    <a  href="#services">Services</a>
+                </div>
+                <div class="box">
+                    <a href="#bottom">Bottom</a>
+                </div>
+            </div>
+        </section>
     </header>
     <main>
-        <div class="banner-container">
+        <div id="home" class="banner-container">
             <div class="banner-description">
                 <h2 class="b-tittle">Better design for
                     your digital products</h2>
@@ -28,6 +48,42 @@
                 <img src="images/banner.png" alt="" width="300px">
             </div>
         </div>
+        <section id="about">
+        <h2 class="tittle-2">About Us</h2>
+        <br>
+        <div class="about-section">
+            <div class="about-img"><img src="images/section.png" alt="" width="300px">
+            </div>
+            <div class="about-description">
+                <h2 class="sub-tittle">We grow brands through bold & strategic creative</h2>
+                <br>
+                <p class="banner-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor, repellendus amet est quos iste iusto totam explicabo error recusandae ipsa facilis reprehenderit similique rerum consequuntur, illum eius, quia ab pariatur.</p>
+                <br>
+                <button class="btn">Contact us</button>
+            </div>
+        </div>
+        </section>
+        <section id="services">
+            <h2 class="tittle-3">Our services</h2>
+            <br>
+            <div class="service-section">
+                <div class="box2">
+                    <img src="icon/2.png" alt="" width="80px">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae excepturi odio soluta. Aliquam, harum. Nobis amet provident quaerat fuga delectus dolores, a quod veniam sequi atque fugiat assumenda sit exercitationem.</p>
+                    <button class="btn2">Details</button>
+                </div>
+                <div class="box2">
+                    <img src="icon/1.png" alt="" width=80px">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae excepturi odio soluta. Aliquam, harum. Nobis amet provident quaerat fuga delectus dolores, a quod veniam sequi atque fugiat assumenda sit exercitationem.</p>
+                    <button class="btn2">Details</button>
+                </div>
+                <div class="box2">
+                   <img src="icon/0.png" alt="" width="80px">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae excepturi odio soluta. Aliquam, harum. Nobis amet provident quaerat fuga delectus dolores, a quod veniam sequi atque fugiat assumenda sit exercitationem.</p>
+                    <button class="btn2">Details</button>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
