Completed the site v-1.00

--- a/project-copy-mahim/index.html
+++ b/project-copy-mahim/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <section>
+        <section id="head">
             <div class="logo-section">
                 <div class="logo">
                     <img src="logo/logo-dark.png" alt="logo-dark" width="130px">
@@ -18,19 +18,19 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section id="menus">
             <div class="menu-options">
                 <div class="box">
-                    <a href="#home">Home</a>
+                    <a class="menu-link" href="#home">Home</a>
                 </div>
                 <div class="box">
-                    <a href="#about">About us</a>
+                    <a class="menu-link" href="#about">About us</a>
                 </div>
                 <div class="box">
-                    <a  href="#services">Services</a>
+                    <a class="menu-link" href="#services">Services</a>
                 </div>
                 <div class="box">
-                    <a href="#bottom">Bottom</a>
+                    <a class="menu-link" href="#bottom">Bottom</a>
                 </div>
             </div>
         </section>
@@ -69,21 +69,74 @@
             <div class="service-section">
                 <div class="box2">
                     <img src="icon/2.png" alt="" width="80px">
+                    <br>
+                    <h2>Digital arts</h2>
+                    <br>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae excepturi odio soluta. Aliquam, harum. Nobis amet provident quaerat fuga delectus dolores, a quod veniam sequi atque fugiat assumenda sit exercitationem.</p>
+                    <br>
                     <button class="btn2">Details</button>
                 </div>
                 <div class="box2">
-                    <img src="icon/1.png" alt="" width=80px">
+                    <img src="icon/1.png" alt="" width="80px">
+                    <br>
+                    <h2>Website design</h2>
+                    <br>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae excepturi odio soluta. Aliquam, harum. Nobis amet provident quaerat fuga delectus dolores, a quod veniam sequi atque fugiat assumenda sit exercitationem.</p>
+                    <br>
                     <button class="btn2">Details</button>
                 </div>
                 <div class="box2">
                    <img src="icon/0.png" alt="" width="80px">
+                   <br>
+                   <h2>App design</h2>
+                   <br>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae excepturi odio soluta. Aliquam, harum. Nobis amet provident quaerat fuga delectus dolores, a quod veniam sequi atque fugiat assumenda sit exercitationem.</p>
+                    <br>
                     <button class="btn2">Details</button>
                 </div>
             </div>
         </section>
     </main>
+    <footer>
+        <section id="bottom">
+            <div class="foot-logo-section">
+                <img src="logo/logo-dark.png" alt="" width="130px">
+                <br>
+                <br>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis, magni porro. Saepe voluptates corrupti, deserunt dignissimos nihil pariatur error minus quis incidunt illum quas harum, nobis temporibus odit? Quam, consectetur.
+                </p>
+            </div>
+            <div class="links">
+                <h3 class="tittle-4">Useful links</h3>
+                <br>
+                <br>
+                <a class="footer-link" href="#about">About us</a>
+                <a class="footer-link" href="">Careers</a>
+                <a class="footer-link" href="">News and articles</a>
+                <a class="footer-link" href="">Legal notice</a>
+            </div>
+            <div class="supports">
+                <h3 class="tittle-4">Supports</h3>
+                <br>
+                <br>
+                <a class="footer-link" href="">Help Line</a>
+                <a class="footer-link" href="">Contact us</a>
+                <a class="footer-link" href="">FAQ</a>
+            </div>
+            <div class="con-info">
+                <h3 class="tittle-4">Contact Information</h3>
+                <br>
+                <br>
+                <p>Feel free to reach us anytime.</p>
+                <address>
+                    234 Gulshan road, Gulshan, Dhaka
+                </address>
+                <e-mail>info@geekfolio.com</e-mail>
+            </div>
+        </section>
+        <hr class="line">
+        <p class="copy-right">Copyright 2023 @geek. All rights reserved</p>
+    </footer>
 </body>
 </html>
